# WordCloud

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
blender_scripts/: bmf.py
include/: base.h  bmf.h  dictionary.h  gjk.h  image.h  image_effects.h  renderer.h
res/: car.blend  car.blend1  car.bmf  car.mtl  car_collider.mtl  cube.bmf
src/: base.c  bmf.c  dictionary.c  gjk.c  image.c  image_effects.c  main.c  renderer.c
